--- a/EPcheckdf.ipynb
+++ b/EPcheckdf.ipynb
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "[1657904 rows x 8 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -850,75 +850,63 @@
        "      <th>Region</th>\n",
        "      <th>Peril</th>\n",
        "      <th>Weight</th>\n",
-       "      <th>LobId</th>\n",
-       "      <th>LobName</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2438082</th>\n",
+       "      <th>547694</th>\n",
        "      <td>207557</td>\n",
        "      <td>53895970</td>\n",
        "      <td>2020-05-30 00:00:00+00:00</td>\n",
        "      <td>2020-05-30 00:00:00+00:00</td>\n",
-       "      <td>2.250859e+10</td>\n",
+       "      <td>3.453762e+10</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SPER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7172515</th>\n",
+       "      <th>1611027</th>\n",
        "      <td>149148</td>\n",
        "      <td>53891598</td>\n",
        "      <td>2020-05-13 00:00:00+00:00</td>\n",
        "      <td>2020-05-13 00:00:00+00:00</td>\n",
-       "      <td>2.197889e+10</td>\n",
+       "      <td>3.373548e+10</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SPER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>126752</th>\n",
+       "      <th>28421</th>\n",
        "      <td>4312</td>\n",
        "      <td>53893301</td>\n",
        "      <td>2020-11-10 00:00:00+00:00</td>\n",
        "      <td>2020-11-10 00:00:00+00:00</td>\n",
-       "      <td>2.160561e+10</td>\n",
+       "      <td>3.347862e+10</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SPER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7324135</th>\n",
+       "      <th>1645083</th>\n",
        "      <td>154312</td>\n",
        "      <td>53893301</td>\n",
        "      <td>2020-11-10 00:00:00+00:00</td>\n",
        "      <td>2020-11-10 00:00:00+00:00</td>\n",
-       "      <td>2.092983e+10</td>\n",
+       "      <td>3.221461e+10</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SPER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2189848</th>\n",
+       "      <th>491948</th>\n",
        "      <td>199148</td>\n",
        "      <td>53891598</td>\n",
        "      <td>2020-05-13 00:00:00+00:00</td>\n",
        "      <td>2020-05-13 00:00:00+00:00</td>\n",
-       "      <td>1.993543e+10</td>\n",
+       "      <td>3.099766e+10</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SPER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -930,123 +918,98 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1206715</th>\n",
-       "      <td>165828</td>\n",
-       "      <td>53876702</td>\n",
-       "      <td>2020-10-21 00:00:00+00:00</td>\n",
-       "      <td>2020-10-21 00:00:00+00:00</td>\n",
-       "      <td>1.870107e-03</td>\n",
+       "      <th>486028</th>\n",
+       "      <td>198256</td>\n",
+       "      <td>53862881</td>\n",
+       "      <td>2020-12-04 00:00:00+00:00</td>\n",
+       "      <td>2020-12-04 00:00:00+00:00</td>\n",
+       "      <td>2.110336e-02</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>2</td>\n",
-       "      <td>AUTO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6610523</th>\n",
-       "      <td>130081</td>\n",
-       "      <td>53865125</td>\n",
-       "      <td>2020-12-14 00:00:00+00:00</td>\n",
-       "      <td>2020-12-14 00:00:00+00:00</td>\n",
-       "      <td>1.669423e-03</td>\n",
-       "      <td>EU</td>\n",
-       "      <td>WS</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AGR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5205308</th>\n",
-       "      <td>82560</td>\n",
-       "      <td>53881107</td>\n",
-       "      <td>2020-10-25 00:00:00+00:00</td>\n",
-       "      <td>2020-10-25 00:00:00+00:00</td>\n",
-       "      <td>8.474226e-04</td>\n",
-       "      <td>EU</td>\n",
-       "      <td>WS</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>2</td>\n",
-       "      <td>AUTO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2570628</th>\n",
-       "      <td>212031</td>\n",
-       "      <td>53872002</td>\n",
+       "      <th>1651290</th>\n",
+       "      <td>155237</td>\n",
+       "      <td>53878083</td>\n",
        "      <td>2020-12-16 00:00:00+00:00</td>\n",
        "      <td>2020-12-16 00:00:00+00:00</td>\n",
-       "      <td>6.278728e-04</td>\n",
+       "      <td>1.608249e-02</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AGR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3664837</th>\n",
-       "      <td>249127</td>\n",
-       "      <td>53885692</td>\n",
-       "      <td>2020-01-16 00:00:00+00:00</td>\n",
-       "      <td>2020-01-16 00:00:00+00:00</td>\n",
-       "      <td>3.690754e-04</td>\n",
+       "      <th>1402436</th>\n",
+       "      <td>117682</td>\n",
+       "      <td>53872146</td>\n",
+       "      <td>2020-11-24 00:00:00+00:00</td>\n",
+       "      <td>2020-11-24 00:00:00+00:00</td>\n",
+       "      <td>1.527867e-02</td>\n",
        "      <td>EU</td>\n",
        "      <td>WS</td>\n",
        "      <td>0.000004</td>\n",
-       "      <td>5</td>\n",
-       "      <td>SPER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172185</th>\n",
+       "      <td>25918</td>\n",
+       "      <td>53875127</td>\n",
+       "      <td>2020-01-17 00:00:00+00:00</td>\n",
+       "      <td>2020-01-17 00:00:00+00:00</td>\n",
+       "      <td>7.786828e-03</td>\n",
+       "      <td>EU</td>\n",
+       "      <td>WS</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1217449</th>\n",
+       "      <td>89818</td>\n",
+       "      <td>53855161</td>\n",
+       "      <td>2020-02-09 00:00:00+00:00</td>\n",
+       "      <td>2020-02-09 00:00:00+00:00</td>\n",
+       "      <td>2.959355e-03</td>\n",
+       "      <td>EU</td>\n",
+       "      <td>WS</td>\n",
+       "      <td>0.000004</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7381508 rows × 10 columns</p>\n",
+       "<p>1657904 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        PeriodId   EventId                 EventDate  \\\n",
-       "2438082   207557  53895970 2020-05-30 00:00:00+00:00   \n",
-       "7172515   149148  53891598 2020-05-13 00:00:00+00:00   \n",
-       "126752      4312  53893301 2020-11-10 00:00:00+00:00   \n",
-       "7324135   154312  53893301 2020-11-10 00:00:00+00:00   \n",
-       "2189848   199148  53891598 2020-05-13 00:00:00+00:00   \n",
+       "547694    207557  53895970 2020-05-30 00:00:00+00:00   \n",
+       "1611027   149148  53891598 2020-05-13 00:00:00+00:00   \n",
+       "28421       4312  53893301 2020-11-10 00:00:00+00:00   \n",
+       "1645083   154312  53893301 2020-11-10 00:00:00+00:00   \n",
+       "491948    199148  53891598 2020-05-13 00:00:00+00:00   \n",
        "...          ...       ...                       ...   \n",
-       "1206715   165828  53876702 2020-10-21 00:00:00+00:00   \n",
-       "6610523   130081  53865125 2020-12-14 00:00:00+00:00   \n",
-       "5205308    82560  53881107 2020-10-25 00:00:00+00:00   \n",
-       "2570628   212031  53872002 2020-12-16 00:00:00+00:00   \n",
-       "3664837   249127  53885692 2020-01-16 00:00:00+00:00   \n",
+       "486028    198256  53862881 2020-12-04 00:00:00+00:00   \n",
+       "1651290   155237  53878083 2020-12-16 00:00:00+00:00   \n",
+       "1402436   117682  53872146 2020-11-24 00:00:00+00:00   \n",
+       "172185     25918  53875127 2020-01-17 00:00:00+00:00   \n",
+       "1217449    89818  53855161 2020-02-09 00:00:00+00:00   \n",
        "\n",
-       "                         LossDate          Loss Region Peril    Weight LobId  \\\n",
-       "2438082 2020-05-30 00:00:00+00:00  2.250859e+10     EU    WS  0.000004     5   \n",
-       "7172515 2020-05-13 00:00:00+00:00  2.197889e+10     EU    WS  0.000004     5   \n",
-       "126752  2020-11-10 00:00:00+00:00  2.160561e+10     EU    WS  0.000004     5   \n",
-       "7324135 2020-11-10 00:00:00+00:00  2.092983e+10     EU    WS  0.000004     5   \n",
-       "2189848 2020-05-13 00:00:00+00:00  1.993543e+10     EU    WS  0.000004     5   \n",
-       "...                           ...           ...    ...   ...       ...   ...   \n",
-       "1206715 2020-10-21 00:00:00+00:00  1.870107e-03     EU    WS  0.000004     2   \n",
-       "6610523 2020-12-14 00:00:00+00:00  1.669423e-03     EU    WS  0.000004     1   \n",
-       "5205308 2020-10-25 00:00:00+00:00  8.474226e-04     EU    WS  0.000004     2   \n",
-       "2570628 2020-12-16 00:00:00+00:00  6.278728e-04     EU    WS  0.000004     1   \n",
-       "3664837 2020-01-16 00:00:00+00:00  3.690754e-04     EU    WS  0.000004     5   \n",
+       "                         LossDate          Loss Region Peril    Weight  \n",
+       "547694  2020-05-30 00:00:00+00:00  3.453762e+10     EU    WS  0.000004  \n",
+       "1611027 2020-05-13 00:00:00+00:00  3.373548e+10     EU    WS  0.000004  \n",
+       "28421   2020-11-10 00:00:00+00:00  3.347862e+10     EU    WS  0.000004  \n",
+       "1645083 2020-11-10 00:00:00+00:00  3.221461e+10     EU    WS  0.000004  \n",
+       "491948  2020-05-13 00:00:00+00:00  3.099766e+10     EU    WS  0.000004  \n",
+       "...                           ...           ...    ...   ...       ...  \n",
+       "486028  2020-12-04 00:00:00+00:00  2.110336e-02     EU    WS  0.000004  \n",
+       "1651290 2020-12-16 00:00:00+00:00  1.608249e-02     EU    WS  0.000004  \n",
+       "1402436 2020-11-24 00:00:00+00:00  1.527867e-02     EU    WS  0.000004  \n",
+       "172185  2020-01-17 00:00:00+00:00  7.786828e-03     EU    WS  0.000004  \n",
+       "1217449 2020-02-09 00:00:00+00:00  2.959355e-03     EU    WS  0.000004  \n",
        "\n",
-       "        LobName  \n",
-       "2438082    SPER  \n",
-       "7172515    SPER  \n",
-       "126752     SPER  \n",
-       "7324135    SPER  \n",
-       "2189848    SPER  \n",
-       "...         ...  \n",
-       "1206715    AUTO  \n",
-       "6610523     AGR  \n",
-       "5205308    AUTO  \n",
-       "2570628     AGR  \n",
-       "3664837    SPER  \n",
-       "\n",
-       "[7381508 rows x 10 columns]"
+       "[1657904 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,14 +1020,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyarrow._parquet.ParquetSchema object at 0x0000021DA9903700>\n",
+      "<pyarrow._parquet.ParquetSchema object at 0x0000021DA639B1C0>\n",
+      "required group field_id=-1 schema {\n",
+      "  optional fixed_len_byte_array(3) field_id=-1 PeriodId (Decimal(precision=6, scale=0));\n",
+      "  optional fixed_len_byte_array(4) field_id=-1 EventId (Decimal(precision=8, scale=0));\n",
+      "  optional int64 field_id=-1 EventDate (Timestamp(isAdjustedToUTC=true, timeUnit=milliseconds, is_from_converted_type=false, force_set_converted_type=false));\n",
+      "  optional int64 field_id=-1 LossDate (Timestamp(isAdjustedToUTC=true, timeUnit=milliseconds, is_from_converted_type=false, force_set_converted_type=false));\n",
+      "  optional double field_id=-1 Loss;\n",
+      "  optional binary field_id=-1 Region (String);\n",
+      "  optional binary field_id=-1 Peril (String);\n",
+      "  optional double field_id=-1 Weight;\n",
+      "  optional fixed_len_byte_array(1) field_id=-1 LobId (Decimal(precision=1, scale=0));\n",
+      "  optional binary field_id=-1 LobName (String);\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyarrow.parquet as pq\n",
+    "import os\n",
+    "\n",
+    "# Define the folder path\n",
+    "folder_path = r\"D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\"\n",
+    "\n",
+    "# Get a list of all files in the folder\n",
+    "files = os.listdir(folder_path)\n",
+    "\n",
+    "# Filter the list to include only Parquet files\n",
+    "parquet_files = [f for f in files if f.endswith('.parquet')]\n",
+    "\n",
+    "# Take any one Parquet file from the folder\n",
+    "if parquet_files:\n",
+    "    file_path = os.path.join(folder_path, parquet_files[0])\n",
+    "    \n",
+    "    # Read the Parquet file\n",
+    "    parquet_file = pq.ParquetFile(file_path)\n",
+    "    \n",
+    "    # Print the schema\n",
+    "    print(parquet_file.schema)\n",
+    "else:\n",
+    "    print(\"No Parquet files found in the specified folder.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pyarrow._parquet.ParquetSchema object at 0x0000021E684FED80>\n",
       "required group field_id=-1 schema {\n",
       "  optional fixed_len_byte_array(16) field_id=-1 PeriodId (Decimal(precision=38, scale=0));\n",
       "  optional fixed_len_byte_array(16) field_id=-1 EventId (Decimal(precision=38, scale=0));\n",
@@ -1105,6 +1120,15 @@
     "    print(parquet_file.schema)\n",
     "else:\n",
     "    print(\"No Parquet files found in the specified folder.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Portfolio\\GU"
    ]
   },
   {
