--- a/EPcheckdf.ipynb
+++ b/EPcheckdf.ipynb
@@ -1161,51 +1161,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Head of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Lob_GU_0.parquet:\n",
-      "            AAL  Std  CV LobId LobName\n",
-      "0  1.637329e+08  NaN NaN     5    SPER\n",
-      "1  4.390605e+07  NaN NaN     3     COM\n",
-      "2  1.673495e+07  NaN NaN     1     AGR\n",
-      "3  1.612160e+07  NaN NaN     4     IND\n",
-      "4  1.233376e+07  NaN NaN     2    AUTO\n",
+      "Head of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Portfolio\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Portfolio_GU_0.parquet:\n",
+      "            AAL  Std  CV\n",
+      "0  2.528293e+08  NaN NaN\n",
       "\n",
       "\n",
-      "Head of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Lob_GU_0.parquet:\n",
-      "            AAL           Std        CV LobId LobName\n",
-      "0  1.233376e+07  3.497316e+07  2.835564     2    AUTO\n",
-      "1  1.637329e+08  4.643783e+08  2.836194     5    SPER\n",
-      "2  1.612160e+07  5.045865e+07  3.129879     4     IND\n",
-      "3  1.673495e+07  4.533887e+07  2.709233     1     AGR\n",
-      "4  4.390605e+07  1.294829e+08  2.949091     3     COM\n",
+      "Head of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Portfolio\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Portfolio_GU_0.parquet:\n",
+      "            AAL           Std        CV\n",
+      "0  2.528293e+08  7.232041e+08  2.860444\n",
       "\n",
       "\n",
-      "Schema of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Lob_GU_0.parquet:\n",
-      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20D8D7C0>\n",
+      "Schema of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Portfolio\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Portfolio_GU_0.parquet:\n",
+      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20DA4700>\n",
       "required group field_id=-1 schema {\n",
       "  optional double field_id=-1 AAL;\n",
       "  optional double field_id=-1 Std;\n",
       "  optional double field_id=-1 CV;\n",
-      "  optional fixed_len_byte_array(16) field_id=-1 LobId (Decimal(precision=38, scale=0));\n",
-      "  optional binary field_id=-1 LobName (String);\n",
       "}\n",
       "\n",
       "\n",
       "\n",
-      "Schema of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Lob_GU_0.parquet:\n",
-      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20DA4900>\n",
+      "Schema of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Portfolio\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_STATS_Portfolio_GU_0.parquet:\n",
+      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20DA6C80>\n",
       "required group field_id=-1 schema {\n",
       "  optional double field_id=-1 AAL;\n",
       "  optional double field_id=-1 Std;\n",
       "  optional double field_id=-1 CV;\n",
-      "  optional fixed_len_byte_array(16) field_id=-1 LobId (Decimal(precision=38, scale=0));\n",
-      "  optional binary field_id=-1 LobName (String);\n",
       "}\n",
       "\n",
       "\n",
@@ -1261,8 +1249,8 @@
     "        print(\"Schemas are different.\")\n",
     "\n",
     "# Define the folder paths\n",
-    "folder_path1 = r\"D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Lob\\GU\"\n",
-    "folder_path2 = r\"D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Lob\\GU\"\n",
+    "folder_path1 = r\"D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Portfolio\\GU\"\n",
+    "folder_path2 = r\"D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\STATS\\Portfolio\\GU\"\n",
     "\n",
     "# Get the first Parquet file from each folder\n",
     "file_path1 = get_first_parquet_file(folder_path1)\n",
@@ -1281,73 +1269,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Head of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_PLT_Lob_GU_0.parquet:\n",
-      "  PeriodId   EventId                 EventDate                  LossDate  \\\n",
-      "0   207557  53895970 2020-05-30 00:00:00+00:00 2020-05-30 00:00:00+00:00   \n",
-      "1   149148  53891598 2020-05-13 00:00:00+00:00 2020-05-13 00:00:00+00:00   \n",
-      "2     4312  53893301 2020-11-10 00:00:00+00:00 2020-11-10 00:00:00+00:00   \n",
-      "3   154312  53893301 2020-11-10 00:00:00+00:00 2020-11-10 00:00:00+00:00   \n",
-      "4   199148  53891598 2020-05-13 00:00:00+00:00 2020-05-13 00:00:00+00:00   \n",
-      "\n",
-      "           Loss Region Peril    Weight LobId LobName  \n",
-      "0  2.250859e+10     EU    WS  0.000004     5    SPER  \n",
-      "1  2.197889e+10     EU    WS  0.000004     5    SPER  \n",
-      "2  2.160561e+10     EU    WS  0.000004     5    SPER  \n",
-      "3  2.092983e+10     EU    WS  0.000004     5    SPER  \n",
-      "4  1.993543e+10     EU    WS  0.000004     5    SPER  \n",
+      "Head of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\EP\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_EP_Lob_GU_0.parquet:\n",
+      "  EPType          Loss  ReturnPeriod LobId LobName\n",
+      "0    OEP  1.272369e+09       10000.0     1     AGR\n",
+      "1    OEP  9.602404e+08        5000.0     1     AGR\n",
+      "2    OEP  5.406003e+08        1000.0     1     AGR\n",
+      "3    OEP  4.003002e+08         500.0     1     AGR\n",
+      "4    OEP  2.627126e+08         250.0     1     AGR\n",
       "\n",
       "\n",
-      "Head of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_PLT_Lob_GU_0.parquet:\n",
-      "  PeriodId   EventId                 EventDate                  LossDate  \\\n",
-      "0        1  53859811 2020-02-25 00:00:00+00:00 2020-02-25 00:00:00+00:00   \n",
-      "1        1  53859811 2020-02-25 00:00:00+00:00 2020-02-25 00:00:00+00:00   \n",
-      "2        1  53859811 2020-02-25 00:00:00+00:00 2020-02-25 00:00:00+00:00   \n",
-      "3        1  53859811 2020-02-25 00:00:00+00:00 2020-02-25 00:00:00+00:00   \n",
-      "4        2  53875774 2020-12-21 00:00:00+00:00 2020-12-21 00:00:00+00:00   \n",
-      "\n",
-      "           Loss Region Peril    Weight LobId LobName  \n",
-      "0    127.968238     EU    WS  0.000004     4     IND  \n",
-      "1  24300.404165     EU    WS  0.000004     1     AGR  \n",
-      "2   2070.481834     EU    WS  0.000004     3     COM  \n",
-      "3   1399.975178     EU    WS  0.000004     5    SPER  \n",
-      "4   6924.749010     EU    WS  0.000004     4     IND  \n",
+      "Head of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\EP\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_EP_Lob_GU_0.parquet:\n",
+      "  EPType          Loss  ReturnPeriod LobId LobName\n",
+      "0    OEP  8.639885e+08       10000.0     2    AUTO\n",
+      "1    OEP  6.749918e+08        5000.0     2    AUTO\n",
+      "2    OEP  3.778001e+08        1000.0     2    AUTO\n",
+      "3    OEP  2.847455e+08         500.0     2    AUTO\n",
+      "4    OEP  2.064693e+08         250.0     2    AUTO\n",
       "\n",
       "\n",
-      "Schema of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_PLT_Lob_GU_0.parquet:\n",
-      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20DA7EC0>\n",
+      "Schema of D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\EP\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_EP_Lob_GU_0.parquet:\n",
+      "<pyarrow._parquet.ParquetSchema object at 0x0000021DA778D500>\n",
       "required group field_id=-1 schema {\n",
-      "  optional fixed_len_byte_array(16) field_id=-1 PeriodId (Decimal(precision=38, scale=0));\n",
-      "  optional fixed_len_byte_array(16) field_id=-1 EventId (Decimal(precision=38, scale=0));\n",
-      "  optional int64 field_id=-1 EventDate (Timestamp(isAdjustedToUTC=true, timeUnit=milliseconds, is_from_converted_type=false, force_set_converted_type=false));\n",
-      "  optional int64 field_id=-1 LossDate (Timestamp(isAdjustedToUTC=true, timeUnit=milliseconds, is_from_converted_type=false, force_set_converted_type=false));\n",
+      "  optional binary field_id=-1 EPType (String);\n",
       "  optional double field_id=-1 Loss;\n",
-      "  optional binary field_id=-1 Region (String);\n",
-      "  optional binary field_id=-1 Peril (String);\n",
-      "  optional double field_id=-1 Weight;\n",
+      "  optional double field_id=-1 ReturnPeriod;\n",
       "  optional fixed_len_byte_array(16) field_id=-1 LobId (Decimal(precision=38, scale=0));\n",
       "  optional binary field_id=-1 LobName (String);\n",
       "}\n",
       "\n",
       "\n",
       "\n",
-      "Schema of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_PLT_Lob_GU_0.parquet:\n",
-      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20DA4E80>\n",
+      "Schema of D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\EP\\Lob\\GU\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_EP_Lob_GU_0.parquet:\n",
+      "<pyarrow._parquet.ParquetSchema object at 0x0000021F20D87600>\n",
       "required group field_id=-1 schema {\n",
-      "  optional fixed_len_byte_array(16) field_id=-1 PeriodId (Decimal(precision=38, scale=0));\n",
-      "  optional fixed_len_byte_array(16) field_id=-1 EventId (Decimal(precision=38, scale=0));\n",
-      "  optional int64 field_id=-1 EventDate (Timestamp(isAdjustedToUTC=true, timeUnit=milliseconds, is_from_converted_type=true, force_set_converted_type=false));\n",
-      "  optional int64 field_id=-1 LossDate (Timestamp(isAdjustedToUTC=true, timeUnit=milliseconds, is_from_converted_type=true, force_set_converted_type=false));\n",
+      "  optional binary field_id=-1 EPType (String);\n",
       "  optional double field_id=-1 Loss;\n",
-      "  optional binary field_id=-1 Region (String);\n",
-      "  optional binary field_id=-1 Peril (String);\n",
-      "  optional double field_id=-1 Weight;\n",
+      "  optional double field_id=-1 ReturnPeriod;\n",
       "  optional fixed_len_byte_array(16) field_id=-1 LobId (Decimal(precision=38, scale=0));\n",
       "  optional binary field_id=-1 LobName (String);\n",
       "}\n",
@@ -1405,8 +1369,8 @@
     "        print(\"Schemas are different.\")\n",
     "\n",
     "# Define the folder paths\n",
-    "folder_path1 = r\"D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\"\n",
-    "folder_path2 = r\"D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\PLT\\Lob\\GU\"\n",
+    "folder_path1 = r\"D:\\RISHIN\\Rough\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\EP\\Lob\\GU\"\n",
+    "folder_path2 = r\"D:\\RISHIN\\13_ILC_TASK1\\input\\EXPORT\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\ILC2024_EUWS_PLA_WI_EP_BE_EUR_Losses\\EP\\Lob\\GU\"\n",
     "\n",
     "# Get the first Parquet file from each folder\n",
     "file_path1 = get_first_parquet_file(folder_path1)\n",
